# video-downloader-with-whisper

./: .gitignore  download.py  main.py  pyproject.toml
