[project]
name = "whisper-for-youtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "openai-whisper>=20250625",
    "pytubefix>=9.3.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.53.2",
    "yt-dlp>=2025.6.30",
]
