[project]
name = "whisper-for-youtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20250625",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "whisper-timestamped>=1.15.8",
    "yt-dlp>=2025.6.30",
]
